Fix RTL alignment

--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -1,5 +1,6 @@
 .calendar {
   display: flex;
+  direction: ltr;
 }
 
 .calendar > .month {
